// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic scaffolding to work 1`] = `
Array [
  Array [
    "ModelBase",
    "import { MSTGQLObject } from \\"mst-gql\\"

export const ModelBase = MSTGQLObject
",
    false,
  ],
  Array [
    "UserModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types, Instance } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./ModelBase\\"
import { RootStoreType } from \\"./index\\"


/**
 * UserBaseNoRefs
 * auto generated base class for the model UserModel without refs.
 */
const UserModelBaseNoRefs = ModelBase
  .named('User')
  .props({
    __typename: types.optional(types.literal(\\"User\\"), \\"User\\"),
    id: types.identifier,
    name: types.union(types.undefined, types.string),
    avatar: types.union(types.undefined, types.string),
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

/**
 * UserBase
 * auto generated base class for the model UserModel.
 */
export const UserModelBase: typeof UserModelBaseNoRefs = UserModelBaseNoRefs
  .props({

  })

export type UserModelBaseRefsType = {

}


export class UserModelSelector extends QueryBuilder {
  get id() { return this.__attr(\`id\`) }
  get name() { return this.__attr(\`name\`) }
  get avatar() { return this.__attr(\`avatar\`) }
}
export function selectFromUser() {
  return new UserModelSelector()
}

export const userModelPrimitives = selectFromUser().name.avatar
",
    true,
  ],
  Array [
    "UserModel",
    "import { Instance } from \\"mobx-state-tree\\"
import { UserModelBase , UserModelBaseRefsType } from \\"./UserModel.base\\"

/* A graphql query fragment builders for UserModel */
export { selectFromUser, userModelPrimitives, UserModelSelector } from \\"./UserModel.base\\"

/* The TypeScript type of an instance of UserModelBase */
export interface UserModelType extends Instance<typeof UserModel.Type> {}
export interface UserModelType extends UserModelBaseRefsType {}

/* Helper function to cast self argument to a UserModel instance */
const as = (self: any) => self as unknown as UserModelType

/**
 * UserModel
 */
export const UserModel = UserModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(as(self)))
    }
  }))
",
    false,
  ],
  Array [
    "RootStore",
    "import { Instance } from \\"mobx-state-tree\\"
import { RootStoreBase, RootStoreBaseRefsType } from \\"./RootStore.base\\"

/* The TypeScript type of an instance of RootStore */
export interface RootStoreType extends Instance<typeof RootStore.Type> {}
export interface RootStoreType extends RootStoreBaseRefsType {}

/* Helper function to cast self argument to a RootStore instance */
const as = (self: any) => self as unknown as RootStoreType

export const RootStore = RootStoreBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(as(self)))
    }
  }))
",
    false,
  ],
  Array [
    "RootStore.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */
import { ObservableMap } from \\"mobx\\"
import { types } from \\"mobx-state-tree\\"
import { MSTGQLStore, configureStoreMixin, QueryOptions } from \\"mst-gql\\"

import { UserModel, UserModelType } from \\"./UserModel\\"
import { userModelPrimitives, UserModelSelector } from \\"./UserModel.base\\"


/**
* Store, managing, among others, all the objects received through graphQL
*/
const RootStoreBaseNoRefs = MSTGQLStore
  .named(\\"RootStore\\")
  .extend(configureStoreMixin([['User', () => UserModel]], ['User']))
  .actions(self => ({
    queryMe(variables?: {  }, resultSelector: string | ((qb: UserModelSelector) => UserModelSelector) = userModelPrimitives.toString(), options: QueryOptions = {}) {
      return self.query<{ me: UserModelType}>(\`query me { me {
        \${typeof resultSelector === \\"function\\" ? resultSelector(new UserModelSelector()).toString() : resultSelector}
      } }\`, variables, options)
    },
  }))

export const RootStoreBase: typeof RootStoreBaseNoRefs = RootStoreBaseNoRefs
  .props({
    users: types.optional(types.map(types.late(() => UserModel)), {})
  })

export type RootStoreBaseRefsType = {
  users: ObservableMap<string, UserModelType>
}
",
    true,
  ],
  Array [
    "reactUtils",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { createStoreContext, createUseQueryHook } from \\"mst-gql\\"
import * as React from \\"react\\"
import { RootStore, RootStoreType } from \\"./RootStore\\"

export const StoreContext = createStoreContext<RootStoreType>(React)

export const useQuery = createUseQueryHook(StoreContext, React)
",
    true,
  ],
  Array [
    "index",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

export * from \\"./UserModel\\"
export * from \\"./RootStore\\"
export * from \\"./reactUtils\\"
",
    true,
  ],
]
`;

exports[`interface field type to work 1`] = `
Array [
  Array [
    "ModelBase",
    "import { MSTGQLObject } from \\"mst-gql\\"

export const ModelBase = MSTGQLObject
",
    false,
  ],
  Array [
    "RepoModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types, Instance } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./ModelBase\\"
import { OrganizationModel } from \\"./OrganizationModel\\"
import { OwnerModelType } from \\"./OwnerModel\\"
import { OwnerModelSelector } from \\"./OwnerModelSelector\\"
import { UserModel } from \\"./UserModel\\"
import { RootStoreType } from \\"./index\\"


/**
 * RepoBaseNoRefs
 * auto generated base class for the model RepoModel without refs.
 */
const RepoModelBaseNoRefs = ModelBase
  .named('Repo')
  .props({
    __typename: types.optional(types.literal(\\"Repo\\"), \\"Repo\\"),
    id: types.identifier,
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

/**
 * RepoBase
 * auto generated base class for the model RepoModel.
 */
export const RepoModelBase: typeof RepoModelBaseNoRefs = RepoModelBaseNoRefs
  .props({
    owner: types.union(types.undefined, types.null, types.union(types.late(() => UserModel), types.late(() => OrganizationModel))),
  })

export type RepoModelBaseRefsType = {
  owner: OwnerModelType,
}


export class RepoModelSelector extends QueryBuilder {
  get id() { return this.__attr(\`id\`) }
  owner(builder?: string | OwnerModelSelector | ((selector: OwnerModelSelector) => OwnerModelSelector)) { return this.__child(\`owner\`, OwnerModelSelector, builder) }
}
export function selectFromRepo() {
  return new RepoModelSelector()
}

export const repoModelPrimitives = selectFromRepo()
",
    true,
  ],
  Array [
    "RepoModel",
    "import { Instance } from \\"mobx-state-tree\\"
import { RepoModelBase , RepoModelBaseRefsType } from \\"./RepoModel.base\\"

/* A graphql query fragment builders for RepoModel */
export { selectFromRepo, repoModelPrimitives, RepoModelSelector } from \\"./RepoModel.base\\"

/* The TypeScript type of an instance of RepoModelBase */
export interface RepoModelType extends Instance<typeof RepoModel.Type> {}
export interface RepoModelType extends RepoModelBaseRefsType {}

/* Helper function to cast self argument to a RepoModel instance */
const as = (self: any) => self as unknown as RepoModelType

/**
 * RepoModel
 */
export const RepoModel = RepoModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(as(self)))
    }
  }))
",
    false,
  ],
  Array [
    "OwnerModelSelector",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { QueryBuilder } from \\"mst-gql\\"
import { OrganizationModelSelector } from \\"./OrganizationModel.base\\"
import { UserModelSelector } from \\"./UserModel.base\\"

export class OwnerModelSelector extends QueryBuilder {
  get id() { return this.__attr(\`id\`) }
  get name() { return this.__attr(\`name\`) }
  user(builder?: string | UserModelSelector | ((selector: UserModelSelector) => UserModelSelector)) { return this.__inlineFragment(\`User\`, UserModelSelector, builder) }
  organization(builder?: string | OrganizationModelSelector | ((selector: OrganizationModelSelector) => OrganizationModelSelector)) { return this.__inlineFragment(\`Organization\`, OrganizationModelSelector, builder) }
}
export function selectFromOwner() {
  return new OwnerModelSelector()
}

export const ownerModelPrimitives = selectFromOwner().name",
    true,
  ],
  Array [
    "UserModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types, Instance } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./ModelBase\\"
import { RootStoreType } from \\"./index\\"


/**
 * UserBaseNoRefs
 * auto generated base class for the model UserModel without refs.
 */
const UserModelBaseNoRefs = ModelBase
  .named('User')
  .props({
    __typename: types.optional(types.literal(\\"User\\"), \\"User\\"),
    id: types.identifier,
    name: types.union(types.undefined, types.string),
    avatar: types.union(types.undefined, types.string),
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

/**
 * UserBase
 * auto generated base class for the model UserModel.
 */
export const UserModelBase: typeof UserModelBaseNoRefs = UserModelBaseNoRefs
  .props({

  })

export type UserModelBaseRefsType = {

}


export class UserModelSelector extends QueryBuilder {
  get id() { return this.__attr(\`id\`) }
  get name() { return this.__attr(\`name\`) }
  get avatar() { return this.__attr(\`avatar\`) }
}
export function selectFromUser() {
  return new UserModelSelector()
}

export const userModelPrimitives = selectFromUser().name.avatar
",
    true,
  ],
  Array [
    "UserModel",
    "import { Instance } from \\"mobx-state-tree\\"
import { UserModelBase , UserModelBaseRefsType } from \\"./UserModel.base\\"

/* A graphql query fragment builders for UserModel */
export { selectFromUser, userModelPrimitives, UserModelSelector } from \\"./UserModel.base\\"

/* The TypeScript type of an instance of UserModelBase */
export interface UserModelType extends Instance<typeof UserModel.Type> {}
export interface UserModelType extends UserModelBaseRefsType {}

/* Helper function to cast self argument to a UserModel instance */
const as = (self: any) => self as unknown as UserModelType

/**
 * UserModel
 */
export const UserModel = UserModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(as(self)))
    }
  }))
",
    false,
  ],
  Array [
    "OrganizationModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types, Instance } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./ModelBase\\"
import { RootStoreType } from \\"./index\\"


/**
 * OrganizationBaseNoRefs
 * auto generated base class for the model OrganizationModel without refs.
 */
const OrganizationModelBaseNoRefs = ModelBase
  .named('Organization')
  .props({
    __typename: types.optional(types.literal(\\"Organization\\"), \\"Organization\\"),
    id: types.identifier,
    name: types.union(types.undefined, types.string),
    logo: types.union(types.undefined, types.string),
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

/**
 * OrganizationBase
 * auto generated base class for the model OrganizationModel.
 */
export const OrganizationModelBase: typeof OrganizationModelBaseNoRefs = OrganizationModelBaseNoRefs
  .props({

  })

export type OrganizationModelBaseRefsType = {

}


export class OrganizationModelSelector extends QueryBuilder {
  get id() { return this.__attr(\`id\`) }
  get name() { return this.__attr(\`name\`) }
  get logo() { return this.__attr(\`logo\`) }
}
export function selectFromOrganization() {
  return new OrganizationModelSelector()
}

export const organizationModelPrimitives = selectFromOrganization().name.logo
",
    true,
  ],
  Array [
    "OrganizationModel",
    "import { Instance } from \\"mobx-state-tree\\"
import { OrganizationModelBase , OrganizationModelBaseRefsType } from \\"./OrganizationModel.base\\"

/* A graphql query fragment builders for OrganizationModel */
export { selectFromOrganization, organizationModelPrimitives, OrganizationModelSelector } from \\"./OrganizationModel.base\\"

/* The TypeScript type of an instance of OrganizationModelBase */
export interface OrganizationModelType extends Instance<typeof OrganizationModel.Type> {}
export interface OrganizationModelType extends OrganizationModelBaseRefsType {}

/* Helper function to cast self argument to a OrganizationModel instance */
const as = (self: any) => self as unknown as OrganizationModelType

/**
 * OrganizationModel
 */
export const OrganizationModel = OrganizationModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(as(self)))
    }
  }))
",
    false,
  ],
  Array [
    "RootStore",
    "import { Instance } from \\"mobx-state-tree\\"
import { RootStoreBase, RootStoreBaseRefsType } from \\"./RootStore.base\\"

/* The TypeScript type of an instance of RootStore */
export interface RootStoreType extends Instance<typeof RootStore.Type> {}
export interface RootStoreType extends RootStoreBaseRefsType {}

/* Helper function to cast self argument to a RootStore instance */
const as = (self: any) => self as unknown as RootStoreType

export const RootStore = RootStoreBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(as(self)))
    }
  }))
",
    false,
  ],
  Array [
    "RootStore.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */
import { ObservableMap } from \\"mobx\\"
import { types } from \\"mobx-state-tree\\"
import { MSTGQLStore, configureStoreMixin, QueryOptions } from \\"mst-gql\\"

import { RepoModel, RepoModelType } from \\"./RepoModel\\"
import { repoModelPrimitives, RepoModelSelector } from \\"./RepoModel.base\\"
import { UserModel, UserModelType } from \\"./UserModel\\"
import { userModelPrimitives, UserModelSelector } from \\"./UserModel.base\\"
import { OrganizationModel, OrganizationModelType } from \\"./OrganizationModel\\"
import { organizationModelPrimitives, OrganizationModelSelector } from \\"./OrganizationModel.base\\"


/**
* Store, managing, among others, all the objects received through graphQL
*/
const RootStoreBaseNoRefs = MSTGQLStore
  .named(\\"RootStore\\")
  .extend(configureStoreMixin([['Repo', () => RepoModel], ['User', () => UserModel], ['Organization', () => OrganizationModel]], ['Repo']))
  .actions(self => ({
    queryRepo(variables?: {  }, resultSelector: string | ((qb: RepoModelSelector) => RepoModelSelector) = repoModelPrimitives.toString(), options: QueryOptions = {}) {
      return self.query<{ repo: RepoModelType}>(\`query repo { repo {
        \${typeof resultSelector === \\"function\\" ? resultSelector(new RepoModelSelector()).toString() : resultSelector}
      } }\`, variables, options)
    },
  }))

export const RootStoreBase: typeof RootStoreBaseNoRefs = RootStoreBaseNoRefs
  .props({
    repos: types.optional(types.map(types.late(() => RepoModel)), {})
  })

export type RootStoreBaseRefsType = {
  repos: ObservableMap<string, RepoModelType>
}
",
    true,
  ],
  Array [
    "reactUtils",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { createStoreContext, createUseQueryHook } from \\"mst-gql\\"
import * as React from \\"react\\"
import { RootStore, RootStoreType } from \\"./RootStore\\"

export const StoreContext = createStoreContext<RootStoreType>(React)

export const useQuery = createUseQueryHook(StoreContext, React)
",
    true,
  ],
  Array [
    "index",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

export * from \\"./RepoModel\\"
export * from \\"./OwnerModelSelector\\"
export * from \\"./UserModel\\"
export * from \\"./OrganizationModel\\"
export * from \\"./RootStore\\"
export * from \\"./reactUtils\\"
",
    true,
  ],
]
`;

exports[`union field type to work 1`] = `
Array [
  Array [
    "ModelBase",
    "import { MSTGQLObject } from \\"mst-gql\\"

export const ModelBase = MSTGQLObject
",
    false,
  ],
  Array [
    "SearchResultModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types, Instance } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./ModelBase\\"
import { BookModel } from \\"./BookModel\\"
import { MovieModel } from \\"./MovieModel\\"
import { SearchItemModelType } from \\"./SearchItemModel\\"
import { SearchItemModelSelector } from \\"./SearchItemModelSelector\\"
import { RootStoreType } from \\"./index\\"


/**
 * SearchResultBaseNoRefs
 * auto generated base class for the model SearchResultModel without refs.
 */
const SearchResultModelBaseNoRefs = ModelBase
  .named('SearchResult')
  .props({
    __typename: types.optional(types.literal(\\"SearchResult\\"), \\"SearchResult\\"),
    inputQuery: types.union(types.undefined, types.string),
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

/**
 * SearchResultBase
 * auto generated base class for the model SearchResultModel.
 */
export const SearchResultModelBase: typeof SearchResultModelBaseNoRefs = SearchResultModelBaseNoRefs
  .props({
    items: types.union(types.undefined, types.array(types.union(types.null, types.union(types.late(() => MovieModel), types.late(() => BookModel))))),
  })

export type SearchResultModelBaseRefsType = {
  items: SearchItemModelType,
}


export class SearchResultModelSelector extends QueryBuilder {
  get inputQuery() { return this.__attr(\`inputQuery\`) }
  items(builder?: string | SearchItemModelSelector | ((selector: SearchItemModelSelector) => SearchItemModelSelector)) { return this.__child(\`items\`, SearchItemModelSelector, builder) }
}
export function selectFromSearchResult() {
  return new SearchResultModelSelector()
}

export const searchResultModelPrimitives = selectFromSearchResult().inputQuery
",
    true,
  ],
  Array [
    "SearchResultModel",
    "import { Instance } from \\"mobx-state-tree\\"
import { SearchResultModelBase , SearchResultModelBaseRefsType } from \\"./SearchResultModel.base\\"

/* A graphql query fragment builders for SearchResultModel */
export { selectFromSearchResult, searchResultModelPrimitives, SearchResultModelSelector } from \\"./SearchResultModel.base\\"

/* The TypeScript type of an instance of SearchResultModelBase */
export interface SearchResultModelType extends Instance<typeof SearchResultModel.Type> {}
export interface SearchResultModelType extends SearchResultModelBaseRefsType {}

/* Helper function to cast self argument to a SearchResultModel instance */
const as = (self: any) => self as unknown as SearchResultModelType

/**
 * SearchResultModel
 */
export const SearchResultModel = SearchResultModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(as(self)))
    }
  }))
",
    false,
  ],
  Array [
    "SearchItemModelSelector",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { QueryBuilder } from \\"mst-gql\\"
import { BookModelSelector, bookModelPrimitives } from \\"./BookModel.base\\"
import { MovieModelSelector, movieModelPrimitives } from \\"./MovieModel.base\\"

export class SearchItemModelSelector extends QueryBuilder {
  movie(builder?: string | MovieModelSelector | ((selector: MovieModelSelector) => MovieModelSelector)) { return this.__inlineFragment(\`Movie\`, MovieModelSelector, builder) }
  book(builder?: string | BookModelSelector | ((selector: BookModelSelector) => BookModelSelector)) { return this.__inlineFragment(\`Book\`, BookModelSelector, builder) }
}
export function selectFromSearchItem() {
  return new SearchItemModelSelector()
}

// provides all primitive fields of union member types combined together
export const searchItemModelPrimitives = selectFromSearchItem().movie(movieModelPrimitives).book(bookModelPrimitives)",
    true,
  ],
  Array [
    "MovieModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types, Instance } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./ModelBase\\"
import { RootStoreType } from \\"./index\\"


/**
 * MovieBaseNoRefs
 * auto generated base class for the model MovieModel without refs.
 */
const MovieModelBaseNoRefs = ModelBase
  .named('Movie')
  .props({
    __typename: types.optional(types.literal(\\"Movie\\"), \\"Movie\\"),
    description: types.union(types.undefined, types.string),
    director: types.union(types.undefined, types.string),
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

/**
 * MovieBase
 * auto generated base class for the model MovieModel.
 */
export const MovieModelBase: typeof MovieModelBaseNoRefs = MovieModelBaseNoRefs
  .props({

  })

export type MovieModelBaseRefsType = {

}


export class MovieModelSelector extends QueryBuilder {
  get description() { return this.__attr(\`description\`) }
  get director() { return this.__attr(\`director\`) }
}
export function selectFromMovie() {
  return new MovieModelSelector()
}

export const movieModelPrimitives = selectFromMovie().description.director
",
    true,
  ],
  Array [
    "MovieModel",
    "import { Instance } from \\"mobx-state-tree\\"
import { MovieModelBase , MovieModelBaseRefsType } from \\"./MovieModel.base\\"

/* A graphql query fragment builders for MovieModel */
export { selectFromMovie, movieModelPrimitives, MovieModelSelector } from \\"./MovieModel.base\\"

/* The TypeScript type of an instance of MovieModelBase */
export interface MovieModelType extends Instance<typeof MovieModel.Type> {}
export interface MovieModelType extends MovieModelBaseRefsType {}

/* Helper function to cast self argument to a MovieModel instance */
const as = (self: any) => self as unknown as MovieModelType

/**
 * MovieModel
 */
export const MovieModel = MovieModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(as(self)))
    }
  }))
",
    false,
  ],
  Array [
    "BookModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types, Instance } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./ModelBase\\"
import { RootStoreType } from \\"./index\\"


/**
 * BookBaseNoRefs
 * auto generated base class for the model BookModel without refs.
 */
const BookModelBaseNoRefs = ModelBase
  .named('Book')
  .props({
    __typename: types.optional(types.literal(\\"Book\\"), \\"Book\\"),
    description: types.union(types.undefined, types.string),
    author: types.union(types.undefined, types.string),
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

/**
 * BookBase
 * auto generated base class for the model BookModel.
 */
export const BookModelBase: typeof BookModelBaseNoRefs = BookModelBaseNoRefs
  .props({

  })

export type BookModelBaseRefsType = {

}


export class BookModelSelector extends QueryBuilder {
  get description() { return this.__attr(\`description\`) }
  get author() { return this.__attr(\`author\`) }
}
export function selectFromBook() {
  return new BookModelSelector()
}

export const bookModelPrimitives = selectFromBook().description.author
",
    true,
  ],
  Array [
    "BookModel",
    "import { Instance } from \\"mobx-state-tree\\"
import { BookModelBase , BookModelBaseRefsType } from \\"./BookModel.base\\"

/* A graphql query fragment builders for BookModel */
export { selectFromBook, bookModelPrimitives, BookModelSelector } from \\"./BookModel.base\\"

/* The TypeScript type of an instance of BookModelBase */
export interface BookModelType extends Instance<typeof BookModel.Type> {}
export interface BookModelType extends BookModelBaseRefsType {}

/* Helper function to cast self argument to a BookModel instance */
const as = (self: any) => self as unknown as BookModelType

/**
 * BookModel
 */
export const BookModel = BookModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(as(self)))
    }
  }))
",
    false,
  ],
  Array [
    "RootStore",
    "import { Instance } from \\"mobx-state-tree\\"
import { RootStoreBase, RootStoreBaseRefsType } from \\"./RootStore.base\\"

/* The TypeScript type of an instance of RootStore */
export interface RootStoreType extends Instance<typeof RootStore.Type> {}
export interface RootStoreType extends RootStoreBaseRefsType {}

/* Helper function to cast self argument to a RootStore instance */
const as = (self: any) => self as unknown as RootStoreType

export const RootStore = RootStoreBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(as(self)))
    }
  }))
",
    false,
  ],
  Array [
    "RootStore.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */
import { ObservableMap } from \\"mobx\\"
import { types } from \\"mobx-state-tree\\"
import { MSTGQLStore, configureStoreMixin, QueryOptions } from \\"mst-gql\\"

import { SearchResultModel, SearchResultModelType } from \\"./SearchResultModel\\"
import { searchResultModelPrimitives, SearchResultModelSelector } from \\"./SearchResultModel.base\\"
import { MovieModel, MovieModelType } from \\"./MovieModel\\"
import { movieModelPrimitives, MovieModelSelector } from \\"./MovieModel.base\\"
import { BookModel, BookModelType } from \\"./BookModel\\"
import { bookModelPrimitives, BookModelSelector } from \\"./BookModel.base\\"


/**
* Store, managing, among others, all the objects received through graphQL
*/
const RootStoreBaseNoRefs = MSTGQLStore
  .named(\\"RootStore\\")
  .extend(configureStoreMixin([['SearchResult', () => SearchResultModel], ['Movie', () => MovieModel], ['Book', () => BookModel]], ['SearchResult']))
  .actions(self => ({
    querySearch(variables: { text: string }, resultSelector: string | ((qb: SearchResultModelSelector) => SearchResultModelSelector) = searchResultModelPrimitives.toString(), options: QueryOptions = {}) {
      return self.query<{ search: SearchResultModelType}>(\`query search($text: String!) { search(text: $text) {
        \${typeof resultSelector === \\"function\\" ? resultSelector(new SearchResultModelSelector()).toString() : resultSelector}
      } }\`, variables, options)
    },
  }))

export const RootStoreBase: typeof RootStoreBaseNoRefs = RootStoreBaseNoRefs
  .props({
    searchresults: types.optional(types.map(types.late(() => SearchResultModel)), {})
  })

export type RootStoreBaseRefsType = {
  searchresults: ObservableMap<string, SearchResultModelType>
}
",
    true,
  ],
  Array [
    "reactUtils",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { createStoreContext, createUseQueryHook } from \\"mst-gql\\"
import * as React from \\"react\\"
import { RootStore, RootStoreType } from \\"./RootStore\\"

export const StoreContext = createStoreContext<RootStoreType>(React)

export const useQuery = createUseQueryHook(StoreContext, React)
",
    true,
  ],
  Array [
    "index",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

export * from \\"./SearchResultModel\\"
export * from \\"./SearchItemModelSelector\\"
export * from \\"./MovieModel\\"
export * from \\"./BookModel\\"
export * from \\"./RootStore\\"
export * from \\"./reactUtils\\"
",
    true,
  ],
]
`;
